# spellbook

./: 1q  Cargo.toml  LICENSE  README.md
src/: lib.rs  router.rs
src/router/: mod.rs  tree.rs
